# ralph

./: .gitignore  PRD.md  README.md  ROADMAP.md  example-prd.md  ralph.env.example  ralph.sh  ralphcc.sh  ralphoc.sh
cli/: bin.js  package-lock.json  package.json
cli/scripts/: postinstall.js
cli/src/: index.ts
cli/src/__tests__/: ralph-sh.test.ts  readme.test.ts
cli/src/cli/: args.ts
cli/src/cli/__tests__/: args.test.ts
cli/src/cli/commands/: init.ts  run.ts
cli/src/cli/commands/__tests__/: init.test.ts  run-single-task.test.ts
cli/src/config/: generator.ts  loader.ts
cli/src/config/__tests__/: generator.test.ts  loader.test.ts
cli/src/detectors/: base.ts  go.ts  index.ts  nodejs.ts  python.ts  registry.ts  rust.ts  types.ts
cli/src/detectors/__fixtures__/go-cli/: go.mod
cli/src/detectors/__fixtures__/go-gin/: go.mod
cli/src/detectors/__fixtures__/nodejs-express/: package.json
cli/src/detectors/__fixtures__/nodejs-sveltekit/: package.json
cli/src/detectors/__fixtures__/python-django/: pyproject.toml  requirements.txt
cli/src/detectors/__fixtures__/python-fastapi/: pyproject.toml
cli/src/detectors/__fixtures__/rust-axum/: Cargo.toml
cli/src/detectors/__fixtures__/rust-cli/: Cargo.toml
cli/src/detectors/__tests__/: detectors.test.ts  fixtures.test.ts  go.test.ts  nodejs.test.ts  python.test.ts  rust.test.ts
cli/src/engines/: base.ts  claude.ts  opencode.ts
cli/src/engines/__tests__/: btca.test.ts  claude.test.ts  opencode.test.ts
cli/src/tasks/: parser.ts  progress.ts  verification.ts
cli/src/tasks/__tests__/: parser.test.ts  progress.test.ts  verification.test.ts
cli/src/ui/: logger.ts
cli/src/ui/__tests__/: logger.test.ts
tests/: autofix-preexisting-failures.test.ts  claude-exit-code-capture.test.ts  differential-test-verification.test.ts  end-to-end-behavior.test.ts  iteration-timing.test.ts  log-resources.test.ts  preflight-baseline.test.ts  progress-file-logging.test.ts  signal-trapping.test.ts  state-persistence.test.ts  test_preflight.sh
