[project]
name = "django-app"
version = "1.0.0"
description = "A Django web application"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "black>=24.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
