[package]
name = "rust-cli"
version = "1.0.0"
edition = "2021"
description = "A command-line tool"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
